--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,19 +27,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Terraform Validate
+      - name: Terraform Init & Validate
         run: |
           cd terraform
           terraform init -input=false
           terraform validate
       
-      - name: Terraform Plan
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform plan
-
-      - name: Terraform Apply
+      - name: Terraform Plan & Apply
         run: |
           cd terraform
           terraform init -input=false
@@ -49,9 +43,7 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          printf "ec2_ip=%s\n" $(terraform output -raw ec2_public_ip) >> "$GITHUB_OUTPUT"
-        # IP=$(terraform output -raw ec2_public_ip | tr -d '\r\n')
-        # echo "ec2_ip=$IP" >> $GITHUB_OUTPUT
+          echo "ec2_ip=$(terraform output -raw ec2_public_ip)" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
@@ -59,13 +51,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
 
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
@@ -75,5 +60,4 @@ jobs:
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
             echo "✅ Connected to EC2"
-
             sudo apt update -y && sudo apt upgrade -y
