--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,41 +27,43 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Terraform Init & Validate
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform validate
+      # - name: Terraform Init & Validate
+      #   run: |
+      #     cd terraform
+      #     terraform init -input=false
+      #     terraform validate
       
-      - name: Terraform Plan & Apply
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform apply -auto-approve
-
+      # - name: Terraform Plan & Apply
+      #   run: |
+      #     cd terraform
+      #     terraform init -input=false
+      #     terraform apply -auto-approve
+          
       - name: Get EC2 Public IP
         id: get_ip
         run: |
           cd terraform
-          terraform_output=$(terraform output -raw ec2_public_ip)
+          which terraform
+          terraform version
+          terraform_output=$(terraform output -raw ec2_public_ip 2>/dev/null)
           echo "Public IP: $terraform_output"
           echo "ec2_ip=$terraform_output" >> "$GITHUB_OUTPUT"
+    
+  # remote_train:
+  #   runs-on: ubuntu-latest
+  #   needs: terraform_deployment
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-  remote_train:
-    runs-on: ubuntu-latest
-    needs: terraform_deployment
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: SSH into EC2 and Run Training Script
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
-          username: ubuntu
-          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          run: |
-            echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
-          script: |
-            echo "✅ Connected to EC2"
-            sudo apt update -y && sudo apt upgrade -y
+  #     - name: SSH into EC2 and Run Training Script
+  #       uses: appleboy/ssh-action@v1.0.0
+  #       with:
+  #         host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
+  #         username: ubuntu
+  #         key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+  #         run: |
+  #           echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
+  #         script: |
+  #           echo "✅ Connected to EC2"
+  #           sudo apt update -y && sudo apt upgrade -y
