--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          ip=$(terraform output -raw ec2_public_ip 2>/dev/null | head -n 1 | tr -d '\r')
+          ip=$(terraform output ec2_public_ip | sed 's/"//g')
           echo "Extracted IP: $ip"
           echo "ec2_ip=$ip" >> $GITHUB_OUTPUT
        
