--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,10 +50,13 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          terraform init -input=false
-          ip=$(terraform output ec2_public_ip | sed 's/"//g')
+          terraform_path=$(which terraform)
+          $terraform_path init -input=false
+          ip=$($terraform_path output ec2_public_ip | sed 's/"//g')
           echo "Extracted IP: $ip"
           echo "ec2_ip=$ip" >> $GITHUB_OUTPUT
+
+ 
        
     
   # remote_train:
