--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,11 +50,10 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          terraform_path=$(which terraform)
-          $terraform_path init -input=false
-          ip=$($terraform_path output ec2_public_ip | sed 's/"//g')
-          echo "Extracted IP: $ip"
-          echo "ec2_ip=$ip" >> $GITHUB_OUTPUT
+          terraform init -input=false
+          ip=$($terraform output -raw ec2_public_ip || echo "")
+          echo "Extracted IP: ${ip}"
+          echo "ec2_ip=${ip}" >> $GITHUB_OUTPUT
 
  
        
