--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          ip=$($terraform output -raw ec2_public_ip || echo "")
+          ip=$(terraform output -raw ec2_public_ip || echo "")
           echo "Extracted IP: ${ip}"
           echo "ec2_ip=${ip}" >> $GITHUB_OUTPUT
 
