--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,9 +51,10 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          ip=$(terraform output -raw ec2_public_ip || echo "")
-          echo "Extracted IP: ${ip}"
-          echo "ec2_ip=${ip}" >> $GITHUB_OUTPUT
+          ip=$(terraform output -raw ec2_public_ip)
+          echo "Extracted IP: $ip"
+          echo "ec2_ip=${ip}" >> "$GITHUB_OUTPUT"
+
 
  
        
