--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,21 +58,21 @@ jobs:
  
        
     
-  # remote_train:
-  #   runs-on: ubuntu-latest
-  #   needs: terraform_deployment
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  remote_train:
+    runs-on: ubuntu-latest
+    needs: terraform_deployment
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  #     - name: SSH into EC2 and Run Training Script
-  #       uses: appleboy/ssh-action@v1.0.0
-  #       with:
-  #         host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
-  #         username: ubuntu
-  #         key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-  #         run: |
-  #           echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
-  #         script: |
-  #           echo "✅ Connected to EC2"
-  #           sudo apt update -y && sudo apt upgrade -y
+      - name: SSH into EC2 and Run Training Script
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
+          username: ubuntu
+          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+          run: |
+            echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
+          script: |
+            echo "✅ Connected to EC2"
+            sudo apt update -y && sudo apt upgrade -y
