--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,17 +62,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: terraform_deployment
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: SSH into EC2 and Run Training Script
-        uses: appleboy/ssh-action@v1.0.0
-        with:
+      - env:
           host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
-          username: ubuntu
-          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          run: |
-            echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
-          script: |
-            echo "✅ Connected to EC2"
-            sudo apt update -y && sudo apt upgrade -y
+        run:
+          echo "host"
+      # - name: Checkout code
+      #   uses: actions/checkout@v3
+
+      # - name: SSH into EC2 and Run Training Script
+      #   uses: appleboy/ssh-action@v1.0.0
+      #   with:
+      #     host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
+      #     username: ubuntu
+      #     key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+      #     script: |
+      #       echo "✅ Connected to EC2"
+      #       sudo apt update -y && sudo apt upgrade -y
