--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          echo "ip=$(terraform output ec2_public_ip | tr -d '"')"
+          echo "ip=$(terraform output ec2_public_ip)"
           echo "ec2_ip=${ip}" >> "$GITHUB_OUTPUT"
 
 
