--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          IP=$(terraform output -raw ec2_public_ip)"
+          IP=$(terraform output ec2_public_ip | tr -d '"')
           echo "Public IP: $IP"
           echo "ec2_ip=$IP" >> "$GITHUB_OUTPUT"
 
