--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: '1.12.2'
+          terraform_version: '1.3.0'
 
       - name: Set up AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
@@ -28,24 +28,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      # - name: Terraform Init & Validate
-      #   run: |
-      #     cd terraform
-      #     terraform init -input=false
-      #     terraform validate
-      
-      # - name: Terraform Plan & Apply
-      #   run: |
-      #     cd terraform
-      #     terraform init -input=false
-      #     terraform apply -auto-approve
-
-      - name: Debug Terraform Output
+      - name: Terraform Init & Validate
         run: |
           cd terraform
           terraform init -input=false
           terraform validate
-      
+
       - name: Terraform Plan & Apply
         run: |
           cd terraform
@@ -56,20 +44,48 @@ jobs:
         id: get_ip
         run: |
           cd terraform
-          IP=$(terraform output -raw ec2_public_ip)"
-          echo "Public IP: $IP"
-          echo "ec2_ip=$IP >> "$GITHUB_OUTPUT"
+          RAW_OUTPUT=$(terraform output -raw ec2_public_ip | tr -d '\r')
+          CLEAN_IP="${RAW_OUTPUT%%::*}"  # Remove anything after ::
+          echo "Cleaned IP: $CLEAN_IP"
+          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_OUTPUT"
 
   remote_train:
     runs-on: ubuntu-latest
     needs: terraform_deployment
     steps:
-      - env:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: SSH into EC2 and Run Training Script
+        uses: appleboy/ssh-action@v1.0.0
+        with:
           host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
           username: ubuntu
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          run: |
-            echo "Public IP: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
           script: |
-            echo "✅ Connected to EC2"
+            echo "Connected to EC2"
+
             sudo apt update -y && sudo apt upgrade -y
+            sudo apt install -y python3 python3-pip git
+
+            mkdir -p ~/.ssh
+            chmod 700 ~/.ssh
+            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+            ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
+
+            git clone git@github.com:Shoaib720/asl-mlops.git
+            cd asl-mlops
+            git checkout feature/bts-13-terraform
+
+            pip3 install virtualenv
+            virtualenv .venv
+            source .venv/bin/activate
+
+            pip install -r requirements.txt
+            pip install dvc[s3]
+
+            dvc pull
+            dvc repro
+            dvc push
