--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,7 +47,7 @@ jobs:
           RAW_OUTPUT=$(terraform output -raw ec2_public_ip | tr -d '\r')
           CLEAN_IP="${RAW_OUTPUT%%::*}"  # Remove anything after ::
           echo "Cleaned IP: $CLEAN_IP"
-          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_OUTPUT"
+          echo "ec2_ip=$CLEAN_IP" >> $GITHUB_OUTPUT
 
   remote_train:
     runs-on: ubuntu-latest
