--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,14 +39,19 @@ jobs:
           cd terraform
           terraform init -input=false
           terraform apply -auto-approve
-          
+
       - name: Get EC2 Public IP
         id: get_ip
         run: |
           cd terraform
+          terraform init -input=false
           CLEAN_IP=$(terraform output -raw ec2_public_ip | tr -d '\r')
           echo "Cleaned IP: $CLEAN_IP"
-          echo "ec2_ip=$CLEAN_IP" >> $GITHUB_OUTPUT
+          {
+            echo "ec2_ip=$CLEAN_IP"
+          } >> "$GITHUB_OUTPUT"
+
+
 
 
   remote_train:
