--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,69 +28,69 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Terraform Init & Validate
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform validate
+      # - name: Terraform Init & Validate
+      #   run: |
+      #     cd terraform
+      #     terraform init -input=false
+      #     terraform validate
 
-      - name: Terraform Plan & Apply
-        run: |
-          cd terraform
-          terraform init -input=false
-          terraform apply -auto-approve
-
+      # - name: Terraform Plan & Apply
+      #   run: |
+      #     cd terraform
+      #     terraform init -input=false
+      #     terraform apply -auto-approve
+          
       - name: Get EC2 Public IP
         id: get_ip
         run: |
           cd terraform
           terraform init -input=false
-          CLEAN_IP=$(terraform output -raw ec2_public_ip | tr -d '\r')
+          terraform_output=$(terraform output -raw ec2_public_ip)
+          CLEAN_IP=$(echo "$terraform_output" | sed 's/[^0-9.]//g')
           echo "Cleaned IP: $CLEAN_IP"
-          {
-            echo "ec2_ip=$CLEAN_IP"
-          } >> "$GITHUB_OUTPUT"
+          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"  # Use $GITHUB_ENV instead
+ 
 
 
 
 
-  remote_train:
-    runs-on: ubuntu-latest
-    needs: terraform_deployment
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # remote_train:
+  #   runs-on: ubuntu-latest
+  #   needs: terraform_deployment
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: SSH into EC2 and Run Training Script
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
-          username: ubuntu
-          key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
-          script: |
-            echo "Connected to EC2"
+  #     - name: SSH into EC2 and Run Training Script
+  #       uses: appleboy/ssh-action@v1.0.0
+  #       with:
+  #         host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
+  #         username: ubuntu
+  #         key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
+  #         script: |
+  #           echo "Connected to EC2"
 
-            sudo apt update -y && sudo apt upgrade -y
-            sudo apt install -y python3 python3-pip git
+  #           sudo apt update -y && sudo apt upgrade -y
+  #           sudo apt install -y python3 python3-pip git
 
-            mkdir -p ~/.ssh
-            chmod 700 ~/.ssh
-            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
+  #           mkdir -p ~/.ssh
+  #           chmod 700 ~/.ssh
+  #           echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+  #           chmod 600 ~/.ssh/id_rsa
+  #           ssh-keyscan github.com >> ~/.ssh/known_hosts
+  #           ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
 
-            git clone git@github.com:Shoaib720/asl-mlops.git
-            cd asl-mlops
-            git checkout feature/bts-13-terraform
+  #           git clone git@github.com:Shoaib720/asl-mlops.git
+  #           cd asl-mlops
+  #           git checkout feature/bts-13-terraform
 
-            pip3 install virtualenv
-            virtualenv .venv
-            source .venv/bin/activate
+  #           pip3 install virtualenv
+  #           virtualenv .venv
+  #           source .venv/bin/activate
 
-            pip install -r requirements.txt
-            pip install dvc[s3]
+  #           pip install -r requirements.txt
+  #           pip install dvc[s3]
 
-            dvc pull
-            dvc repro
-            dvc push
+  #           dvc pull
+  #           dvc repro
+  #           dvc push
