--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,10 +45,25 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
+          
+          # Get the raw output for EC2 public IP
           terraform_output=$(terraform output -raw ec2_public_ip)
+          
+          # Clean up the IP (remove any extra spaces or characters)
           CLEAN_IP=$(echo "$terraform_output" | sed 's/[^0-9.]//g')
+
+          # Ensure the IP address is correct by echoing the cleaned IP
           echo "Cleaned IP: $CLEAN_IP"
-          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"  # Use $GITHUB_ENV instead
+
+          # Ensure the cleaned IP is valid before proceeding
+          if [[ ! "$CLEAN_IP" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Invalid IP address format!"
+            exit 1
+          fi
+
+          # Write the cleaned IP to GitHub environment variable
+          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"
+ 
  
 
 
