--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,8 +49,11 @@ jobs:
           # Get the raw output for EC2 public IP
           terraform_output=$(terraform output -raw ec2_public_ip)
           
+          # Print the raw output for debugging
+          echo "Raw Terraform Output: $terraform_output"
+
           # Clean up the IP (remove any extra spaces or characters)
-          CLEAN_IP=$(echo "$terraform_output" | sed 's/[^0-9.]//g')
+          CLEAN_IP=$(echo "$terraform_output" | tr -d '\r' | sed 's/[^0-9.]//g' | awk 'BEGIN{FS="."} {if(NF==4) print $1"."$2"."$3"."$4}')
 
           # Ensure the IP address is correct by echoing the cleaned IP
           echo "Cleaned IP: $CLEAN_IP"
@@ -63,6 +66,7 @@ jobs:
 
           # Write the cleaned IP to GitHub environment variable
           echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"
+ 
  
  
 
