--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,29 +45,24 @@ jobs:
         run: |
           cd terraform
           terraform init -input=false
-          
-          # Get the raw output for EC2 public IP
           terraform_output=$(terraform output -raw ec2_public_ip)
-          
-          # Print the raw output for debugging
           echo "Raw Terraform Output: $terraform_output"
-
-          # Clean up the IP (remove any extra spaces or characters)
-          CLEAN_IP=$(echo "$terraform_output" | tr -d '\r' | sed 's/[^0-9.]//g' | awk 'BEGIN{FS="."} {if(NF==4) print $1"."$2"."$3"."$4}')
-
-          # Ensure the IP address is correct by echoing the cleaned IP
+          CLEAN_IP=$(echo "$terraform_output" | sed -E 's/[^0-9\.]//g')
           echo "Cleaned IP: $CLEAN_IP"
-
-          # Ensure the cleaned IP is valid before proceeding
           if [[ ! "$CLEAN_IP" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Error: Invalid IP address format!"
             exit 1
           fi
-
-          # Write the cleaned IP to GitHub environment variable
           echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"
  
  
+  remote_train:
+    runs-on: ubuntu-latest
+    needs: terraform_deployment
+    steps:
+      - env:
+          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
+        run: echo "$host"
  
 
 
