--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,30 +39,34 @@ jobs:
       #     cd terraform
       #     terraform init -input=false
       #     terraform apply -auto-approve
-          
+      
       - name: Get EC2 Public IP
         id: get_ip
         run: |
           cd terraform
-          terraform init -input=false
           terraform_output=$(terraform output -raw ec2_public_ip)
-          echo "Raw Terraform Output: $terraform_output"
           CLEAN_IP=$(echo "$terraform_output" | tr -d '\r' | sed 's/[^0-9.]//g' | awk 'BEGIN{FS="."} {if(NF==4) print $1"."$2"."$3"."$4}')
           echo "Cleaned IP: $CLEAN_IP"
           if [[ ! "$CLEAN_IP" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             echo "Error: Invalid IP address format!"
             exit 1
           fi
-          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"
+          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"  # Export the cleaned IP address to GITHUB_ENV
+          echo "::set-output name=ec2_ip::$CLEAN_IP"  # Also set the output for the job
+ 
  
  
   remote_train:
     runs-on: ubuntu-latest
-    needs: terraform_deployment
+    needs: terraform_deployment  # Ensure this job runs after terraform_deployment
     steps:
-      - env:
-          host: ${{ needs.terraform_deployment.outputs.ec2_ip }}
-        run: echo "$host"
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Echo EC2 Public IP
+        run: |
+          echo "EC2 Public IP from terraform_deployment job: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
+
  
 
 
