--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -10,7 +10,7 @@ jobs:
   terraform_deployment:
     runs-on: ubuntu-latest
     outputs:
-      ec2_ip: ${{ steps.get_ip.outputs.ec2_ip }}
+      ec2_ip: ${{ steps.read_ip.outputs.ec2_ip }}
 
     steps:
       - name: Checkout code
@@ -28,37 +28,48 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      # - name: Terraform Init & Validate
-      #   run: |
-      #     cd terraform
-      #     terraform init -input=false
-      #     terraform validate
-
-      # - name: Terraform Plan & Apply
-      #   run: |
-      #     cd terraform
-      #     terraform init -input=false
-      #     terraform apply -auto-approve
-      
-      - name: Get EC2 Public IP
-        id: get_ip
+      - name: Terraform Init & Validate
         run: |
           cd terraform
-          terraform_output=$(terraform output -raw ec2_public_ip)
-          CLEAN_IP=$(echo "$terraform_output" | tr -d '\r' | sed 's/[^0-9.]//g' | awk 'BEGIN{FS="."} {if(NF==4) print $1"."$2"."$3"."$4}')
-          echo "Cleaned IP: $CLEAN_IP"
-          if [[ ! "$CLEAN_IP" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Error: Invalid IP address format!"
-            exit 1
-          fi
-          echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"  # Export the cleaned IP address to GITHUB_ENV
-          echo "::set-output name=ec2_ip::$CLEAN_IP"  # Also set the output for the job
- 
+          terraform init -input=false
+          terraform validate
+
+      - name: Terraform Plan & Apply
+        run: |
+          cd terraform
+          terraform init -input=false
+          terraform apply -auto-approve
+      
+      # - name: Get EC2 Public IP
+      #   id: get_ip
+      #   run: |
+      #     cd terraform
+      #     terraform_output=$(terraform output -raw ec2_public_ip)
+      #     CLEAN_IP=$(echo "$terraform_output" | tr -d '\r' | sed 's/[^0-9.]//g' | awk 'BEGIN{FS="."} {if(NF==4) print $1"."$2"."$3"."$4}')
+      #     echo "Cleaned IP: $CLEAN_IP"
+      #     if [[ ! "$CLEAN_IP" =~ ^[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+      #       echo "Error: Invalid IP address format!"
+      #       exit 1
+      #     fi
+      #     echo "ec2_ip=$CLEAN_IP" >> "$GITHUB_ENV"  # Export the cleaned IP address to GITHUB_ENV
+      #     echo "::set-output name=ec2_ip::$CLEAN_IP"  # Also set the output for the job
+      
+      # - name: Save EC2 Public IP to File
+      #   run: |
+      #     cd terraform
+      #     terraform output -raw ec2_public_ip > ec2_public_ip.txt
+          
+      - name: Read EC2 Public IP from File
+        id: read_ip
+        run: |
+          ec2_ip=$(cat terraform/ec2_public_ip.txt)
+          echo "EC2 Public IP: $ec2_ip"
+          echo "::set-output name=ec2_ip::$ec2_ip"
  
  
   remote_train:
     runs-on: ubuntu-latest
-    needs: terraform_deployment  # Ensure this job runs after terraform_deployment
+    needs: terraform_deployment
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -66,7 +77,6 @@ jobs:
       - name: Echo EC2 Public IP
         run: |
           echo "EC2 Public IP from terraform_deployment job: ${{ needs.terraform_deployment.outputs.ec2_ip }}"
-
  
 
 
