--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -64,8 +64,8 @@ jobs:
         run: |
           ec2_ip=$(cat terraform/ec2_public_ip.txt)
           echo "EC2 Public IP: $ec2_ip"
-          echo "::set-output name=ec2_ip::$ec2_ip"
- 
+          echo "ec2_ip=$ec2_ip" >> "$GITHUB_OUTPUT"
+   # echo "::set-output name=ec2_ip::$ec2_ip"
  
   remote_train:
     runs-on: ubuntu-latest
