--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,7 +53,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+  
+      - name: Setup SSH Key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
 
+          # Add verbosity to SSH for debugging
+          ssh -v -i ~/.ssh/id_rsa ubuntu@${{ needs.terraform_deployment.outputs.ec2_ip }} "echo 'SSH Connection Successful'"
+  
       - name: SSH into EC2 and Run Training Script
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -62,28 +73,21 @@ jobs:
           key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
           script: |
             echo "Connected to EC2"
-
             sudo apt update -y && sudo apt upgrade -y
             sudo apt install -y python3 python3-pip git
-
-            mkdir -p ~/.ssh
-            chmod 700 ~/.ssh
-            echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-            chmod 600 ~/.ssh/id_rsa
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-            ssh-keyscan ${{ needs.terraform_deployment.outputs.ec2_ip }} >> ~/.ssh/known_hosts
-
+  
             git clone git@github.com:Shoaib720/asl-mlops.git
             cd asl-mlops
             git checkout feature/bts-13-terraform
-
+  
             pip3 install virtualenv
             virtualenv .venv
             source .venv/bin/activate
-
+  
             pip install -r requirements.txt
             pip install dvc[s3]
-
+  
             dvc pull
             dvc repro
             dvc push
+   
